[package]
name = "confpub"
version = "0.1.0"
authors = ["Sebastian Kaiser <sk4is3r@gmail.com>"]
edition = "2018"
homepage = "https://github.com/mttrbit/confpub-rs"
repository = "https://github.com/mttrbit/confpub-rs.git"
description = "Interacting with Confluence instances that are protected by SAML + VIP using cli."
keywords = ["symantec", "vip", "api", "confluence"]
readme = "README.md"
license = "ISC"

[dependencies]
vip = { git = "https://github.com/mttrbit/vip-rs", branch = "main"}
saml = { git = "https://github.com/mttrbit/saml-rs", branch = "main"}
confluence = { git = "https://github.com/mttrbit/confluence-rs", branch = "main"}
confluence-publisher = { git = "https://github.com/mttrbit/confluence-publisher-rs", branch = "main"}
reqwest = { version = "0.10.8", features = ["blocking"]}
openssl = "0.10.28"
clap = "2.33.3"
regex = "1"
lazy_static = "1.4.0"
